<resources>
    <string name="app_name">TheAim</string>

    <string name="login_1">用户名/手机号</string>
    <string name="login_2">请输入密码</string>
    <string name="login_3">记住密码</string>
    <string name="login">登录</string>
    <string name="login_4">忘记密码</string>
    <string name="login_5">一键注册</string>
    <string name="login_6">手机注册</string>
    <string name="reg_1">请输入用户名</string>
    <string name="reg">注册</string>
    <string name="phone_reg_1">请输入手机号</string>
    <string name="phone_reg_2">请输入验证码</string>
    <string name="phone_reg_3">获取验证码</string>
    <string name="phone_forget_1">请输入新密码</string>
    <string name="phone_forget_2">重置密码</string>
    <string name="addaim">日程添加</string>
    <string name="time">日期</string>
    <string name="settime">设置时间</string>
    <string name="aim_time">请设置时间</string>
    <string name="points">奖励点数</string>
    <string name="schedule_title">准备做点什么？</string>
    <string name="schedule_describe">描述</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_add_aim">添加目标</string>
    <string name="action_add_reward">添加奖励</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="add_re_dialog_fragment">添加奖励</string>
    <string name="add_re_content">奖励内容</string>
    <string name="add_re_costpoint">奖励所花奖励点</string>
    <string name="sure">确定</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
