<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.zqf.theaim.AddScheduleActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal"
        android:gravity="bottom">

        <ImageButton
            android:id="@+id/state_btn"
            android:layout_width="4dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/square" />

        <TextView
            android:id="@+id/aim_time"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/aim_time" />

        <ImageButton
            android:id="@+id/point_btn"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:background="@drawable/aim_point" />

    </LinearLayout>

    <EditText
        android:id="@+id/aim_title"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:hint="@string/schedule_title"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="45dp" />

    <EditText
        android:id="@+id/aim_describe"
        android:layout_width="match_parent"
        android:layout_height="129dp"
        android:layout_marginBottom="372dp"
        android:hint="@string/schedule_describe"
        android:maxLines="50"
        android:minLines="1"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />
</LinearLayout>
